// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`achievement post content rendering > keeps HTML stable for AVICII Invector 1`] = `
"<p>地味に日本語対応してる</p>
<p>音ゲー3:脳トレ7ぐらいの感じのゲーム。<br>
音ゲー関係ない輪っか潜るギミックでミスると萎える。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Assassin's Creed Odyssey 1`] = `
"<p>※ 結構間が空いてしまったのでうろ覚え</p>
<h1>良かったところ</h1>
<ul>
<li>ものすごいボリューム</li>
<li>苦手だったらステルスしなくても良い（人によってはマイナスポイントかも？）</li>
<li>時限要素ナシ</li>
<li>レベリングや装備集めが楽しい</li>
</ul>
<h1>悪かったところ</h1>
<ul>
<li>悪く言えばストーリーが長すぎ</li>
<li>賞金稼ぎがうざい</li>
</ul>
<h1>感想</h1>
<p>Originsとほぼ同じ。こっちは正統派進化という感じ。<br>
かなり出来の良いオープンワールド。120時間最後まで飽きずにプレイできた。<br>
お使いゲー好きには最高のゲームだと思う。<br>
世界観も良い。散歩してるだけでも旅行気分で楽しい。<br>
DLCでも広いマップが追加されるのでかなり凝ってると思った。ただストーリーの内容で炎上したみたいでレビュー評価は悪いみたい。（自分的にはゲーム内容が面白いのでそこはどうでもよかった）<br>
自分はステルスがどうしても苦手なのでゴリ押しでもわりとなんとかなるのは良かった。もちろんステルスちゃんとしたほうが有利ではあるんだけど。</p>
<h1>実績集めの感想</h1>
<p>難易度自体は低いんですがボリュームがとにかく多いです。<br>
時限要素がほぼ無い（あるけど取り逃すほうが難しい）ので何も気にせずに探索できる。最高。<br>
基本的にはサブクエ埋めてれば実績も埋まっていくが、「○○で○○の敵を○○体倒す」系のやつがちょこちょことあってちょっとだるかった覚えがある。<br>
あと闘技場がものすごいだるかった気がする。ていうか闘技場のコンテンツが面白かったゲームって今までに存在しない気がする。。<br>
難易度はノーマルでもまぁまぁ難しかった気がする。難易度トロフィー無いから途中からイージーでやってた覚えがある。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Assassin's Creed Origins 1`] = `
"<p>※ 結構間が空いてしまったのでうろ覚え</p>
<h1>良かったところ</h1>
<ul>
<li>ものすごいボリューム</li>
<li>苦手だったらステルスしなくても良い（人によってはマイナスポイントかも？）</li>
<li>時限要素(ほぼ)ナシ</li>
<li>レベリングや装備集めが楽しい</li>
<li>お使いゲー好きには最高のゲーム</li>
</ul>
<h1>悪かったところ</h1>
<ul>
<li>ほぼお散歩ゲーみたいなもんなので人によっては退屈かも？</li>
</ul>
<h1>実績集めの感想</h1>
<p>難易度自体は低いがボリュームがとにかく多い。<br>
時限要素はほぼ無い。ただアクセサリーの売却だけはまとめて売るように意識しとかないとほぼやり直しみたいになってしまう覚えがある<br>
闘技場がめちゃくちゃにだるかった覚えがある。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for BLUE REFLECTION　幻に舞う少女の剣 1`] = `
"<p>BGMめっちゃよい。かわいい。<br>
RPGの出来としては普通。<br>
実績集めは楽だった。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Before the Echo 1`] = `
"<p>だいぶ前に買った音ゲーbundleに付いてきたやつ。<br>
音ゲー+RPGの謎ゲー。うまく融合できるかと言われると微妙だった。<br>
実績集めは作業感強め。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Bonsai 1`] = `
"<p>5分ぐらいで飽きる</p>
<p>放置ゲーっぽい見た目してるけどそれなりに操作必要だった覚えがある。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for CODE VEIN 1`] = `
"<p>ダクソ好きにはヌルいのかもしれないが個人的にはほどよい難易度だった。アクション得意じゃない人でも味方NPC使えばカジュアルにプレイできる。<br>
オンライン実績あり。過疎ってるのでほぼフレンド必須。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for CRISIS CORE –FINAL FANTASY VII– REUNION 1`] = `
"<p>めちゃくちゃ良い。FF7が更に好きになった。<br>
リメイクというかはほぼリマスターに近いらしいが古臭さはほぼ感じなかった。<br>
かなりボリュームあった気がしたが意外と時間かからなかった。<br>
トロコン難度はそこまで高くないものの時限要素まみれなのはちょっとつらい<br>
裏ボス自体は弱かったが、それに向けての育成の段階が結構難しかった。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Canyon Capers 1`] = `
"<p>なんか大分前に無料で手に入れたゲーム。<br>
操作性の終わってるクソゲー。<br>
グローバル解除率がなぜか結構高い（5%ぐらい）ので舐めてかかったら結構な難易度だった。<br>
各ステージにクリア評価みたいのがあってそれが実績になっている。最大評価は攻略スピードやどれだけステージ上の収集物を集めたか等で決まるが、だいぶシビア。コンマ1秒とかの勝負になるので相当リトライさせられる。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Cart Racer 1`] = `
"<p>10分もやれば飽きるので全クリはまあまあ苦行<br>
運ゲーなので2時間で終わる人もいれば5時間かかる人もいそうだった。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Chill Corner 1`] = `
"<p>ゲームと言えるのか怪しい。<br>
部屋の模様替えにToDoリストやアラームが付いた感じ。<br>
基本的にはただ放置していれば実績が解除できた。時限要素もなし。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Cyberpunk 2077 1`] = `
"<p>DLCで実績増えるかも？なのでとりあえずバニラでクリア時点</p>
<p>メインストーリーが良い</p>
<ul>
<li>エンディング分岐もそれぞれ味があって良かった</li>
<li>ドライブ楽しい。車の種類も豊富</li>
<li>戦闘システムも豊富で良い。ハッキング楽しい</li>
</ul>
<h1>悪かったところ</h1>
<ul>
<li>ファストトラベルが使いにくいのが地味にストレス</li>
<li>ストーリー等の発生条件で待たされる場面が多い
<ul>
<li>特にケリーのサブストーリーは1話終わるごとにリアルタイム2時間ぐらい待ってた気がする。時間スキップだとだめっぽいし。</li>
<li>車両ディーラーの発生条件も謎だった。結局適当に時間つぶしつつで後回しにしてたら一番最後に解除することになった</li>
</ul>
</li>
</ul>
<h1>実績集めの感想</h1>
<p>十分なボリュームだとは思うけど、サイドジョブ含めて思ったより早く終わってしまった印象。ただしジョブ1個1個の質は良かった。<br>
〇〇で敵を〇〇体系のめんどくさい実績が多かった。あと地味に時限要素が多い。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for DEEMO -Reborn- 1`] = `
"<p>収録曲めっちゃ多くて良い。<br>
音ゲーにしては実績条件はゆるいほうっぽかった。<br>
タイトル画面からサッと演奏まで進めないのがちょっとめんどかった。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Epistory - Typing Chronicles 1`] = `
"<p>面白かった。一口で遊べるボリュームなのも良い。<br>
実績集めは虚無。◯◯倒す系の数が多すぎる・・</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for FINAL FANTASY IV ピクセルリマスター 1`] = `
"<p>FF14やった後だと元ネタがいっぱい出てきて楽しかった。</p>
<p>隠し召喚獣4つとピンクのしっぽ目的のレアドロがそこそこ大変だった。確か確率は1/255ぐらい？合計で4、5時間は粘ったのでわりと根気が必要だった。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for FINAL FANTASY V ピクセルリマスター 1`] = `
"<p>めっちゃ好き。FF14やった後だと元ネタがいっぱい出てきて楽しい</p>
<p>実績バグあり（2022年3月時点）<br>
まあまあ致命的だったのがゴゴの実績解除バグ。正攻法ではモンスター図鑑に登録されないので、無理やりHPを削る必要がある。<br>
倒すためにレベル上げ等準備が必要だが、どうせ全解除に向けてジョブMAX等は行うことになるのでなんとかなる。<br>
ただ、気づかずに正攻法で倒してしまったデータで上書いてしまうとやり直し確定。たまたまセーブデータ取っておいたので助かった。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for FINAL FANTASY VII 1`] = `
"<h1>良かったところ</h1>
<ul>
<li>一番人気なだけあってゲームとしてはやっぱり面白い
<ul>
<li>戦闘バランスは全体的に難しすぎずちょうど良い感じ。ただし裏ボスはかなり強い</li>
<li>マテリアシステムのおかげでパーティのキャラが縛られない（悪く言えば付け外しはちょっとめんどくさいが）</li>
<li>クラウドの人気な理由がよくわかった。愛されキャラ感が良い感じで主人公として出来上がってる</li>
<li>全体的にキャラが立ってて良かった</li>
</ul>
</li>
</ul>
<h1>悪かったところ</h1>
<ul>
<li>以下の理由からSteam版はよっぽどなこだわりが無い限り買わないほうが良い。。Switch版かスクエニストア版を買ったほうが良い
<ul>
<li>英語のみ（MODも非対応）</li>
<li>どこでもセーブが無い</li>
<li>スピードブーストが無い。召喚演出めっちゃ長いし作業も多くなるのでかなりキツイ</li>
</ul>
</li>
<li>ゴールドソーサー関連のやりこみが苦痛だった</li>
<li>やっぱり古いゲームなので今からやるのはちょっと辛い部分もある</li>
</ul>
<h1>感想</h1>
<p>これで自分の中でFFナンバリング制覇になった。<br>
最後が7なの天邪鬼すぎるけど理由があって、Steamで唯一日本語で遊べないという罠。。<br>
5年ほど待ったが結局日本語が来ることはなかったので結局英語でプレイ。セリフ書き起こしてくれてるサイトがあってそこに助けられた。</p>
<p>評価2になってるが、ゲーム自体はとても良くてこれはSteam版のについての評価。<br>
上にも書いてありますがSteam版は色々とだめだった。いや普通にSwitch版とか買えって話なんだけども・・・。悲しき実績厨の末路<br>
さすが人気なだけあってやっぱりゲームとしては全体的に凄く良い出来で、最後にやったのがこれで良かったな～という感じ。<br>
ド王道ストーリーかと思ってから意外と難解でちょっとびっくり。</p>
<h1>実績集めの感想</h1>
<p>100時間記録されてたけど20時間ぐらいは放置な気がする。なので実質プレイ時間は80時間ぐらい？</p>
<p>時限要素いっぱいあるので予習必須。<br>
主にマテリアの取り逃しに注意が必要だった。あとはエアリスのLBとか。<br>
結構作業系の実績が多かった印象。何度スピードブーストがあればと思ったことか・・・</p>
<p>レベル上げはまだマシで、チョコボレースとかバトルスクエアとかのゴールドソーサー系が虚無すぎてきつかった。<br>
マテリア目的でチョコボレース5時間ぐらい頑張った挙げ句、別の手段でも取れることに気づいたときはちょっと折れそうになった<br>
バトルスクエアはもう運ゲーのイライラがしんどすぎる。途中セーブ出来ないのもちょっときつかった。</p>
<p>FFの裏ボスって難易度そうでもないことが多い印象だけど今作はかなり強かった。<br>
ナイツオブラウンドっていうチート技あるにも関わらず結構苦戦してしまった。ていうかこれ使う前提で調整されてる？</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for FINAL FANTASY VII REMAKE INTERGRADE 1`] = `
"<h1>良かったところ</h1>
<ul>
<li>グラがきれい
<ul>
<li>の割にそこまで重くないのも良かった</li>
</ul>
</li>
<li>戦闘システムが良く出来てる
<ul>
<li>LIGHTNING RETURNSの正当進化っぽい感じがした</li>
</ul>
</li>
<li>リメイク前の要素はほぼ残しつつボリュームアップされてる
<ul>
<li>引き伸ばしとか分割商法で結構言われてるけど個人的にはあまり気にならなかった。</li>
<li>オリジナル版プレイした人はグッとくるシーンが多い</li>
</ul>
</li>
<li>やりこみ要素の多さ</li>
</ul>
<h1>感想</h1>
<p>めちゃくちゃ良かった。不満な点がほぼ見つからない<br>
直近でオリジナル版をプレイしていたのもあってかなり楽しめた。<br>
ストーリーは賛否両論あるのは確かにって感じだったけど（特にエンディング付近）、時間経ったらリメイクじゃなく別物って思えばこれもアリな気がしてきた。</p>
<h1>実績集めの感想</h1>
<p>時限要素が無いのでストレス無く進めれた。収集物もわかりやすく配置されてるので良かった。<br>
難易度は高めに感じた。<br>
特にヴァイスはほんとしんどかった。自分が下手すぎるのもあるけど2時間ぐらいかかった・・。<br>
本編のHARDはそこそこな難易度の感じ。17章～のボスで何回か全滅したぐらい。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Fallout: New Vegas 1`] = `
"<p>今更ながらプレイ。めっちゃ良かった。<br>
本編だけでなく各DLCの出来も良い<br>
特にLonesome Roadは雰囲気からストーリーまでかなり好きだった。デスクロー出まくりはビビったけど。<br>
散々言われているDead Moneyも雰囲気良くて結構好きだった。ただ難易度は高すぎるか・・。<br>
事前情報でビビって難易度調整してくれるMODを入れてたからよかったけど、真面目にやったらハゲそうな感じだった。</p>
<p>入れてたMODはざっくりと下記のあたり。実際にはもっと覚えてないぐらい入れてたけどまとめるのがめんどくさかったので割愛。</p>
<ul>
<li>BugFix系</li>
<li>便利系MOD諸々
<ul>
<li>移動速度高速化（MOD入れなくてもコンソールでもできた）</li>
<li>IStewieAl's Tweaks （便利系のつめあわせ）</li>
<li>マップ綺麗にするやつ</li>
<li>待機の高速化</li>
<li>...あと色々！何入れてたか忘れた</li>
</ul>
</li>
<li>美化MOD
<ul>
<li>髪型</li>
<li>MoonRaceShadow</li>
<li>ENB</li>
</ul>
</li>
<li>インベントリ整理</li>
<li>Easy Hacking</li>
<li>Delete Radroach （個人的には一番大事。虫嫌いすぎて・・・。マンティスもちょっと嫌だった）</li>
<li>Dead Moneyのバランス調整</li>
</ul>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Final Fantasy III (3D Remake) 1`] = `
"<p>ピクセルリマスターでプレイ済みだったが、比べるとこっちは主人公たちのキャラが立っていてストーリーもちょこちょこと変わっていたり、あとマップも違ったり隠しダンジョンがあったりで、別物として2度楽しめた</p>
<p>実績集めが思ってた100倍めんどくさかった。<br>
主に熟練度99実績のせい。最終的には150時間ぐらい最初の洞窟でレベル上げしていた。。。（とはいえそのうち7割ぐらいはキーボードマクロ組んで放置でやらせてたが、それでも長すぎる）<br>
宝箱やモンスター図鑑のせいで時限要素の塊なのもキツイ。ストーリー進行中に収集率等は基本見れないので、攻略サイトとにらめっこしつつ慎重に進める必要があった。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Ghostwire: Tokyo 1`] = `
"<p>マップの作り込み凄い。Google map並に精密で歩いてるだけで楽しい<br>
お使いゲー好きには良いゲームだった。<br>
ボリューム少ないから定価に見合ってるか考えるとちょっと微妙かも。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for God of War 1`] = `
"<p>Steamレビューではかなり絶賛されているが、個人的には微妙だった。</p>
<p>ストーリーは相当面白かった。戦闘も爽快感があり良い。<br>
が、とにかく道中のテンポが悪い。謎解きが多すぎるのと、主人公の歩きももっさりしているのでダレる気がした。</p>
<p>エンドコンテンツもしんどかった。<br>
クリア後はニブルヘイム、ムスペルヘイムの２つの世界に行けるようになるが、どっちもイライラ要素の詰め合わせみたいな感じだった。</p>
<p>ムスペルヘイムみたいな、謎の縛りプレイやらしてくる要素ってなぜかどのゲームにも多く入れられがちだけど、これ楽しめるのって相当少数派だろっていつも思ってしまう・・・。</p>
<p>ブルヘイムはこれ面白いって思った人いるんだろうか・・・。<br>
単調すぎるのもあるが、謎の即死トラップもいらないだろと思ってしまった。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Inscryption 1`] = `
"<p>すごい。他のゲームにはあまり無い体験ができる。<br>
実績集めは時限要素が多くてちょっと大変。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for JUDGE EYES：死神の遺言Remastered 1`] = `
"<p>シナリオは最高。けどそれ以外の部分がストレス溜まる・・・。尾行とか致命傷とかしんどかった。<br>
なぜか他シリーズより麻雀関連の達成目録が多かったのが地味にめんどくさかった。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Kingdom Come: Deliverance 1`] = `
"<p>とっつきづらすぎるものの最終的にはかなり良ゲーだと思った。メインストーリーが熱くて良い。<br>
ただMOD無いとまともに遊べないのとかがあって一概にはおすすめとは言えない感じだった。<br>
実績集めは苦行。集められるものはちゃんと自分で集めたもののハードコアモードはさすがに面白くなさそうすぎてMODでズルしてしまったごめんなさい。<br>
◯◯回倒す系の実績が結構あるのに敵のスポーン地点がほとんど無いのとかもつらかった。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for LOST JUDGMENT：裁かれざる記憶 1`] = `
"<p>バッティングセンターだけ異常に難しい気がする・・・。それ以外は過去の如くシリーズと比べるとぬるかった印象。<br>
ユースドラマのボリュームが多くて普通にクリアするだけでもそれなりに大変だった。<br>
ストーリーは伏線回収が気持ちよくて結構好き。<br>
ジャッジアイズに比べると色々快適にはなっているもののやっぱり尾行はストレスだった。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for MONSTER HUNTER RISE 1`] = `
"<p>とにかく時間がかかった。<br>
2ndG依頼まともにやってこなくてアイスボーンはわりとすぐ飽きたけどライズは楽しめることができた。<br>
金冠は出現率6%とかなので過去作に比べたら楽なんだと思う。たぶん。<br>
傀異研究所の実績が一番辛かったかもしれない。傀異化は一撃死で集中力使うから周回に向いてないし楽しくない。。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Marvel's Guardians of the Galaxy 1`] = `
"<p>遊べる映画として見ればすごく良かった<br>
ゲームとしては正直微妙か・・ハドルのテンポの悪さはなんとかしてほしかった<br>
トロフィーは時限要素の塊だったりセーブの仕様のせいでかなりめんどくさかった</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Marvel's Spider-Man: Miles Morales 1`] = `
"<p>操作感とか収集要素の快適さとか前作から正当進化していて良かった。ストーリーはアレだけど。<br>
2周目なぜかムービーが飛ばせたり飛ばせなかったりするのがストレスだった</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Marvel’s Spider-Man Remastered 1`] = `
"<p>とにかく移動が楽しい。<br>
メインストーリーもやりこみ要素も長すぎずちょうどいい感じ。時限要素が無いので実績集めも楽しかった。<br>
終盤になるにつれて面倒くさい敵が増えて戦闘にあまり爽快感が無くなるのだけちょっと嫌だった。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Muse Dash 1`] = `
"<p>この値段でこのクオリティと曲数はすごい<br>
実績は時間かければ取れる系のものが多めなので簡単だった</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Nanotale 1`] = `
"<p>バグ多すぎ問題。<br>
日本語設定だと遊びにくいのも悲しい。<br>
攻略情報がほとんど転がってないのでそこそこ大変。。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for NieR Replicant™ ver.1.22474487139... 1`] = `
"<p>めっちゃ良いゲームだった。<br>
ストーリーがずっと嫌な感じで良かった（褒め言葉）</p>
<p>実績集めは難易度は高くないものの苦行<br>
◯◯秒以内に撃破系がムービー込みの時間なのは雑すぎるて</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Ragnarok Clicker 1`] = `
"<p>Cookie Clickerのコピーゲー。スキルとかカードの仕様は若干変わってそう？<br>
ゆっくりやりすぎたせいで5、6年かかった。たぶんもうちょっと効率的なやり方はありそう。<br>
250回転生する実績が結構大変。ほんとにゆっくりやってたせいで実績の最終階層の3,600まで辿り着いた時点で5回ぐらいしか転生してなかった・・・。<br>
サーバー運営が終了しているので今はもう新規インストールできないっぽい。今となればレアな実績になったので何か得した気分。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for Stray 1`] = `
"<p>目が光るやつとか猫特有の動きとかもちゃんと再現されてて凄く凝ってた。<br>
キャント・キャット・ミーの実績がずば抜けてむずかった。難易度はもちろんのこと、相当な数リトライすることになるので、猫が何度もボコボコにされるのを見続けるのがつらい</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for WORLD OF FINAL FANTASY 1`] = `
"<p>結構好き。過去作やってる人はかなり楽しめる<br>
戦闘システム（のせのせ）も楽しい。<br>
賛否両論かもしれないけど。パーティメンバーいっぱい持ち込めるのとかバラされたときの緊張感とか個人的には好きだった。</p>
<h1>悪かったところ</h1>
<p>主人公の子ボケが多すぎるのがちょっとうっとおしかった。</p>
<ul>
<li>ミニゲームがイライラMAXなのは嫌だった<br>
操作性の悪さやルールの理不尽さで難易度が高い。ミラージュコンプのためにやらなきゃいけない</li>
</ul>
<p>時限要素が無いのは良かったが、トレジャーハンターの実績は地獄だった。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for オクトパストラベラー 1`] = `
"<p>名作。戦闘システムとかグラフィックがかなり好き。<br>
裏ボスは個人的に今までやってきたRPGの中で屈指の強さだった気がする<br>
実績は時限要素の塊でひたすらつらい。<br>
何気に一人旅の難易度が高くてしんどかった</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for クロノ・トリガー 1`] = `
"<p>音楽・シナリオ・バランス・どことっても最高のJRPGな気がする。<br>
実績回収はエンディング回収するだけなので楽だった。<br>
ゲーム自体の難易度もほどよくヌルめでストレス無く遊べて良かった。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for ドラゴンクエストビルダーズ２　破壊神シドーとからっぽの島 1`] = `
"<p>マイクラと比べてちゃんと差別化できていて違った良さがある感じだった。<br>
メインストーリーは期待してなかったけど期待を裏切って面白かった。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for ペルソナ5 スクランブル ザ ファントム ストライカーズ 1`] = `
"<p>P5Rクリアした勢いでそのままプレイ。シナリオは結構良かった。<br>
BANDレベル上げがまあまあ地獄だった。たぶん10時間ぐらい同じボス倒し続けた。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for ペルソナ５ ザ・ロイヤル 1`] = `
"<p>評判通りめちゃくちゃおもしろかった。一気にクリアしてしまった。<br>
実績集めも普通に遊んでいれば全部解除できるので楽。悪く言えばあまり達成感は無いかも。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for ミラーズエッジ カタリスト 1`] = `
"<p>ボリュームはそこまで多くなくプレイ時間は少なめ。<br>
ただ難易度は割と高い。主にダッシュの☆3埋めのせい。youtube見ながらじゃないと絶対ムリでした。</p>
<p>時限トロフィーは無いが、収集物を気にしないですすめるとメインミッションを実質2回やることになるので、気にしない人は1周目から攻略動画見ながらやっておくと楽です。</p>
<p>収集物が結構多いです。マップに載ってるのは集めるの結構楽しかったですが、載っていないやつが結構あるのが残念。<br>
あんな広大なマップでノーヒントは攻略動画見ながらじゃないと無理。。。</p>
<h1>印象に残ってる実績</h1>
<h2>体制との戦い</h2>
<p>最後に解除したのがこれでした。マップでランダムに発生する「介入」イベントを3～4回こなさないといけない。<br>
民間NPC+敵2人が喧嘩？っぽい状況になっていたらそれなので、たまたま見かけたら消化するようにすると後々楽になります。</p>
<h2>絶好調の競技者</h2>
<p>諸悪の根源。最短ルートでやっても目標タイム-0.5sぐらいの超ギリギリなので、よっぽどドMじゃない限りは攻略動画見たほうが良いです。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for ルフランの地下迷宮と魔女ノ旅団 1`] = `
"<p>裏で別ゲーやりながらプレイしてたので実際のプレイ時間はたぶん50時間ぐらい<br>
ダークな雰囲気が良かった。日本一製なだけあってレベリングが楽しかった<br>
トゥルーエンド見るだけで全実績解除されるようになってるが、普通にクリアするまでの難易度がまあまあ高い<br>
中盤の蜂のボスが異常に強くて諦めて難易度下げた<br>
序盤は探索楽しかったものの、途中からどんどんイラつく要素が増えだしたのがちょっと辛かった</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for 初音ミク Project DIVA MEGA39’s＋ 1`] = `
"<p>PCでDIVAができる。最高。<br>
楽曲も衣装も豊富で楽しい。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for 初音ミク ロジックペイントS 1`] = `
"<p>難易度自体は低いが単純に問題量が多くてそこそこ大変だった。<br>
収録曲やイラストは凄く良いのにゲーム内であまり活かされていないのが残念だった。集めたイラストは背景とかにして見れるような機能があれば良かった気がする</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for 大神 絶景版 1`] = `
"<p>結構メインストーリー長くてびっくり。エンディングで泣いちゃった。<br>
昔のゲーム特有の不親切さはかなり感じたので人は選びそう。</p>
<p>羅城門百鬼夜行がめんどくさかった。<br>
1回目2回目はただただダルく、3回目も同じテンションで行ったらめちゃくちゃに難しくてびっくりした。しかも途中退出すると最初からという罠・・・。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for 箭箭剑 Arrow a Row 1`] = `
"<p>実績集めついでにいろんなビルド試せるのが楽しかった。<br>
弓の本数が一番鬼門かと思いきや育ち切ると最強っぽくて意外だった</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for 聖剣伝説3 TRIALS of MANA 1`] = `
"<p>BGMをオリジナル版と切り替えもできるのよかった。<br>
成長システムが結構面白いので周回もそこまで苦じゃなかった。<br>
マップを端から端まで行き来何回もさせられるのがちょっとめんどい。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for 魔界戦記ディスガイア PC 1`] = `
"<p>やろうと思えば永遠に遊べそう<br>
メインストーリーが熱い<br>
個人的にはかなりどストライクなゲームだった。動画とか見ながらダラダラやるのにちょうど良すぎる。<br>
数字の桁が増えるのを楽しむ感じだったのでクリッカーゲーと同じ楽しさがある気がする。<br>
序盤の難易度の高さにはちょっとビビった。Steamの解除率見る感じ100人中7人ぐらいしかエンディング見てないっぽい？<br>
その分終盤になるにつれて脳死でレベル上げできる感じが成長を感じられて好きだった。<br>
合成とか議会とかのメニュー行ったり来たりのめんどくささが目立ったが2以降では改善されてるだろうから楽しみ。</p>
"
`;

exports[`achievement post content rendering > keeps HTML stable for 龍が如く７外伝 名を消した男 1`] = `
"<p>他の如くシリーズに比べると大分トロコン楽だった。時限要素も無いので親切だった。<br>
ただゲーム自体は。。エンディングが良すぎて誤魔化されてるけどだいぶ微妙な出来な気がしてしまった。<br>
値段の割にあまりにもボリューム不足だし目玉コンテンツは闘技場っていうのはうーんて感じ。</p>
"
`;
